Replace minified resources in .html

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,56 @@
 
 	<build>
 		<plugins>
+    		<plugin>         
+        		<groupId>org.apache.maven.plugins</groupId>         
+        		<artifactId>maven-war-plugin</artifactId>         
+        		<version>2.0.1</version>         
+        		<executions>             
+        		    <!-- added for making the replace plugin run in the exploded phase -->             
+        		    <execution>                 
+        		        <id>prepare-war</id>                 
+        		        <phase>prepare-package</phase>                 
+        		        <goals>                     
+        		            <goal>exploded</goal>                 
+        		        </goals>             
+        		    </execution>         
+        		</executions>             
+        		<!-- <configuration>             
+        		    <warSourceExcludes>**/source1.css,**/source2.css,**/sourceN.css,**/source1.js,**/source2.js,**/sourceN.js</warSourceExcludes>         
+        		</configuration> -->                                   
+        	</plugin>
+
+    		<plugin>         
+    		    <groupId>com.google.code.maven-replacer-plugin</groupId>         
+    		    <artifactId>replacer</artifactId>         
+    		    <version>1.5.0</version>         
+    		    <executions>             
+    		        <execution>                 
+    		            <phase>prepare-package</phase>                 
+    		           	<goals>                     
+    		           	    <goal>replace</goal>                 
+    		           	</goals>             
+    		        </execution>         
+    		    </executions>         
+    		    <configuration>             
+    		        <file>target/${project.build.finalName}/index.html</file>            
+    		        <regexFlags>                 
+    		            <regexFlag>MULTILINE</regexFlag>                 
+    		            <regexFlag>DOTALL</regexFlag>            
+    		        </regexFlags>             
+    		        <replacements>                 
+    		            <replacement>                     
+    		                <token>&lt;!--replaceCSS.*replaceCSSEnd--&gt;</token>                     
+    		                <value>&lt;link rel="stylesheet" type="text/css" href="core/css/${project.artifactId}-${project.version}-min.css"/&gt;</value>                 
+    		            </replacement>                 
+    		            <replacement>                     
+    		                <token>&lt;!--replaceJS.*replaceJSEnd--&gt;</token>                     
+    		                <value>&lt;script type="text/javascript" src="core/js/${project.artifactId}-${project.version}-min.js" &gt;&lt;/script&gt;</value>                 
+    		            </replacement>                                     
+    		        </replacements>         
+    		    </configuration>     
+    		</plugin>
+    		 
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>yuicompressor-maven-plugin</artifactId>
@@ -30,28 +80,65 @@
 		          <aggregations>
 		            <aggregation>
 		              <insertNewLine>true</insertNewLine>
+		              <output>${project.build.directory}/${project.build.finalName}/core/js/${project.artifactId}-${project.version}.js</output>
+		              <includes>
+		                <include>constants.js</include>		              
+		                <include>basicControl.js</include>
+		                <include>*.js</include>
+		              </includes>
+		              <excludes>
+		                  <exclude>*-min.js</exclude>
+		              </excludes>
+		            </aggregation>
+		            <aggregation>
+		              <insertNewLine>true</insertNewLine>
 		              <output>${project.build.directory}/${project.build.finalName}/core/js/${project.artifactId}-${project.version}-min.js</output>
 		              <includes>
 		                <include>constants-min.js</include>		              
 		                <include>basicControl-min.js</include>
-		                <include>*.js</include>
+		                <include>*-min.js</include>
 		              </includes>
+		            </aggregation>
+		            <aggregation>
+		              <insertNewLine>true</insertNewLine>
+		              <output>${project.build.directory}/${project.build.finalName}/core/css/${project.artifactId}-${project.version}.css</output>
+		              <includes>
+		                <include>*.css</include>
+		              </includes>
+		              <excludes>
+		                  <exclude>*-min.css</exclude>
+		              </excludes>
 		            </aggregation>
 		            <aggregation>
 		              <insertNewLine>true</insertNewLine>
 		              <output>${project.build.directory}/${project.build.finalName}/core/css/${project.artifactId}-${project.version}-min.css</output>
 		              <includes>
-		                <include>*.css</include>
+		                <include>*-min.css</include>
 		              </includes>
 		            </aggregation>
 		          </aggregations>
                 </configuration>
             </plugin>
+            
 	     	<plugin>
 		       <groupId>org.apache.maven.plugins</groupId>
 		       <artifactId>maven-install-plugin</artifactId>
 		       <version>2.5.1</version>
 	            <executions>  
+	              <execution>          
+	                <id>install-js</id>  
+	                <phase>install</phase>  
+	                <goals>  
+	                  <goal>install-file</goal>  
+	                </goals>  
+	                <configuration>  
+	                  <groupId>${project.groupId}</groupId>
+	                  <artifactId>${project.artifactId}</artifactId>
+	                  <version>${project.version}</version>
+	                  <packaging>js</packaging>
+	                  <file>${project.build.directory}/${project.build.finalName}/core/js/${project.artifactId}-${project.version}.js</file>
+	                </configuration>          
+	              </execution>
 	              <execution>          
 	                <id>install-js-min</id>  
 	                <phase>install</phase>  
@@ -65,6 +152,20 @@
 	                  <packaging>js</packaging>
 	                  <file>${project.build.directory}/${project.build.finalName}/core/js/${project.artifactId}-${project.version}-min.js</file>
 	                  <classifier>min</classifier>
+	                </configuration>          
+	              </execution>
+	              <execution>          
+	                <id>install-css</id>  
+	                <phase>install</phase>  
+	                <goals>  
+	                  <goal>install-file</goal>  
+	                </goals>  
+	                <configuration>  
+	                  <groupId>${project.groupId}</groupId>
+	                  <artifactId>${project.artifactId}</artifactId>
+	                  <version>${project.version}</version>
+	                  <packaging>css</packaging>
+	                  <file>${project.build.directory}/${project.build.finalName}/core/css/${project.artifactId}-${project.version}.css</file>
 	                </configuration>          
 	              </execution>
 	              <execution>          
@@ -84,10 +185,26 @@
 	              </execution>
 	            </executions>  
      		</plugin>
+     		
 	        <plugin>
 	          <artifactId>maven-deploy-plugin</artifactId>
 	          <!-- -DaltDeploymentRepository=snapshot-repo::default::file:target/mvn-repo/snapshots clean deploy -->
 	          <executions>  
+	            <execution>          
+	              <id>deploy-js</id>  
+	              <phase>deploy</phase>  
+	              <goals>  
+	                <goal>deploy-file</goal>  
+	              </goals>  
+	              <configuration>  
+	                <groupId>${project.groupId}</groupId>
+	                <artifactId>${project.artifactId}</artifactId>
+	                <version>${project.version}</version>
+	                <packaging>js</packaging>
+	                <file>${project.build.directory}/${project.build.finalName}/core/js/${project.artifactId}-${project.version}.js</file>
+	                <url>file:target/mvn-repo/snapshots</url>
+	              </configuration>
+	            </execution>
 	            <execution>          
 	              <id>deploy-js-min</id>  
 	              <phase>deploy</phase>  
@@ -101,6 +218,21 @@
 	                <packaging>js</packaging>
 	                <file>${project.build.directory}/${project.build.finalName}/core/js/${project.artifactId}-${project.version}-min.js</file>
 	                <classifier>min</classifier>
+	                <url>file:target/mvn-repo/snapshots</url>
+	              </configuration>
+	            </execution>
+	            <execution>          
+	              <id>deploy-css</id>  
+	              <phase>deploy</phase>  
+	              <goals>  
+	                <goal>deploy-file</goal>  
+	              </goals>  
+	              <configuration>  
+	                <groupId>${project.groupId}</groupId>
+	                <artifactId>${project.artifactId}</artifactId>
+	                <version>${project.version}</version>
+	                <packaging>css</packaging>
+	                <file>${project.build.directory}/${project.build.finalName}/core/css/${project.artifactId}-${project.version}.css</file>
 	                <url>file:target/mvn-repo/snapshots</url>
 	              </configuration>
 	            </execution>
